Minor alignment fixes to navbar when window width is smaller

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,11 @@ ul {
     padding: 0;
 }
 
+.nav li {
+    display: flex;
+    align-items: center;
+}
+
 .intro .left-panel {
     max-width: 430px;
 }
